# vibedb

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  implementation guide.md
src/: api.rs  auth.rs  db.rs  error.rs  explorer.rs  guard.rs  inference.rs  lib.rs  main.rs  storage.rs
ui/: package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/components/: AdvancedFeatures.jsx  AnalysisView.jsx  DashboardView.jsx  DataSidebar.jsx  FileMenu.jsx  MoreAdvancedFeatures.jsx  PulsePanel.jsx  SchemaManager.jsx  Shelves.jsx  SqlConsole.jsx  Worksheet.jsx
ui/src/services/: aiService.js
